--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
     "articleSection" : "",
     "name" : "- About -",
     "headline" : "- About -",
-    "description" : "~嘀嘀嘀~\n先咕咕咕一段时间，最近太忙了。\n立flag5月完成博客的全部搭建。\n本人是加油,很喜欢OnePlus的一些元素,本人所采用的特色图很多都是ShotOnOnePlus。\n本站的帖子基本上在其它论坛都有发布,这里主要是我自己的一个小天地，收集自己的资源。\n虽然博客纯开源，并不代表我所有的博客（文章\x2b图片\x2b部分设计文件）可以任意挂名使用。 所有权归我本人所有!转载请注明出处！谢谢合作！\n本人邮箱： Jzsst@qq.com  \x26lt;友情链接\x26gt;\n[Shot On OnePlus]\x26mdash; [一加社区]\x26mdash; [A\x26amp;C实验室]\x26mdash; [GitHub]\x26mdash; [CSDN]",
+    "description" : "~嘀嘀嘀~\n先咕咕咕一段时间，最近太忙了。\n立flag5月完成博客的全部搭建。\n本人是加油,很喜欢OnePlus的一些元素,本人所采用的特色图很多都是ShotOnOnePlus。\n本站的帖子基本上在其它论坛都有发布,这里主要是我自己的一个小天地，收集自己的资源。\n虽然博客纯开源，并不代表我所有的博客（文章\x2b图片\x2b部分设计文件）可以任意挂名使用。 所有权归我本人所有!转载请注明出处！谢谢合作！\n本人邮箱： Jzsst@qq.com  \x26lt;友情链接\x26gt;\n[Shot On OnePlus]\x26mdash; [一加社区]\x26mdash; [A\x26amp;C实验室]\x26mdash; [GitHub]\x26mdash; [CSDN]\n 本站总访问量次 ",
     "inLanguage" : "zh-CN",
     "author" : "Jzsst",
     "creator" : "Jzsst",
@@ -57,7 +57,7 @@
     "datePublished": "2019-04-21 19:57:06 \x2b0800 CST",
     "dateModified" : "2019-04-21 19:57:06 \x2b0800 CST",
     "url" : "https:\/\/jzsst.github.io\/about\/",
-    "wordCount" : "17",
+    "wordCount" : "18",
     "keywords" : [  "放只虎归个山~~~"]
 }
 </script>
@@ -135,6 +135,14 @@
 <a  target="_blank" href="http://www.goaclab.cn/">[A&amp;C实验室]&mdash;</a>
 <a  target="_blank" href="https://github.com/jzsst">[GitHub]&mdash;</a>
 <a  target="_blank" href="https://blog.csdn.net/qq_41659854">[CSDN]</a></p>
+
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+<p align="center">
+
+<span id="busuanzi_container_site_pv" style="display: inline">本站总访问量<span id="busuanzi_value_page_pv"></span>次</span>
+
+</p>
 
     </div>
 </div>
