--- a/about/index.html
+++ b/about/index.html
@@ -122,13 +122,13 @@
 <p align="center">立flag5月完成博客的全部搭建。</p>
 <p align="center">本人是加油,很喜欢OnePlus的一些元素,本人所采用的特色图很多都是ShotOnOnePlus。</p>
 <p align="center">本站的帖子基本上在其它论坛都有发布,这里主要是我自己的一个小天地，收集自己的资源。</p>
-<p align="center">虽然博客纯开源，并不代表我所有的博客（文章+图片+部分设计文件）可以任意挂名使用。<p>
- <p align="center">所有权归我本人所有!转载请注明出处！谢谢合作！</p>
+<p align="center"  style="font-weight:bold;">虽然博客纯开源，并不代表我所有的博客（文章+图片+部分设计文件）可以任意挂名使用。<p>
+ <p align="center"  style="font-weight:bold;">所有权归我本人所有!转载请注明出处！谢谢合作！</p>
   <p align="center">本人邮箱：
   <a href="mailto:Jzsst@qq.com">Jzsst@qq.com</a>
   </p>
 <br></br>
-<p align="center">&lt;友情链接&gt;</p>
+<p align="center"  style="font-weight:bold;">&lt;友情链接&gt;</p>
 <p align="center">
 <a  target="_blank" href="https://photos.oneplus.com/cn">[Shot On OnePlus]&mdash;</a>
 <a  target="_blank" href="http://www.oneplusbbs.com">[一加社区]&mdash;</a>
@@ -139,7 +139,7 @@
 <p><script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <p align="center">
     <span id="busuanzi_container_site_pv">
-    <span id="busuanzi_container_page_pv"><font color="yellow">全站访问量:</font></span><span id="busuanzi_value_site_pv"></span>次
+    <span id="busuanzi_container_page_pv"><font color="black" style="font-weight:bold;">全站访问量:</span><span id="busuanzi_value_site_pv"></span>次</font>
     </span>
   </p></p>
 
